Added two new attributes that have been added to the database view. Added a specification for each of the new attributes which allows filtering based on specific values. Updated some of the testdata to ensure that the specifications is working as intended. (#60)
